apps/homelab/danielmorgsilva-dev/service.yaml
apiVersion: v1                                            
kind: Service 
metadata:    
  name: danielmorgsilva-dev
  namespace: danielmorgsilva-dev
spec:                                                                                                                                                                                                                                       
  selector:
    app: danielmorgsilva-dev                                                                                                                                                                                                                
  ports:                                                  
    - port: 80
      targetPort: 80
