apps/homelab/danielmorgsilva-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: danielmorgsilva-dev
  namespace: danielmorgsilva-dev
  annotations:
    nginx.org/mergeable-ingress-type: "minion"

spec:
  ingressClassName: nginx
  
  rules:
  - host: danielmorgsilva.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: danielmorgsilva-dev
            port:
              number: 80
